--- a/app/views/e_pubs/show_pdf.html.erb
+++ b/app/views/e_pubs/show_pdf.html.erb
@@ -18,7 +18,7 @@
 
 <% provide :body do %>
   <% if defined? @presenter.file_set_coins_title %>
-    <span class="Z3988" title="<%= @presenter.file_set_coins_title %>"></span>
+    <span class="Z3988" title="<%= @presenter.file_set_coins_title %>" aria-hidden="true"></span>
   <% end %>
   <div class="skip"></div>
     <div id="epub" class="<%= @subdomain %>">
