--- a/app/views/score_catalog/_index_score.html.erb
+++ b/app/views/score_catalog/_index_score.html.erb
@@ -1,7 +1,7 @@
 <div id="maincontent" class="row monograph-info-epub">
   <% if @presenter.monograph_coins_title? %>
       <!-- COinS for Zotero, etc -->
-      <span class="Z3988" title="<%= @presenter.monograph_coins_title %>"></span>
+      <span class="Z3988" title="<%= @presenter.monograph_coins_title %>" aria-hidden="true"></span>
   <% end %>
   <div class="col-sm-3 monograph-cover">
     <%= raw @presenter.work_thumbnail(225) %>
