--- a/app/assets/stylesheets/application/themes.scss
+++ b/app/assets/stylesheets/application/themes.scss
@@ -265,7 +265,7 @@ $heb-black-80: #342f2e;
     margin-top: 0px;
   }
 
-  panel-title a, a.more_facets_link {
+  h3.panel-title a, a.more_facets_link {
     color: #333;
   }
 
@@ -603,7 +603,7 @@ $a2ru-white: #fafafa;
     margin-top: 0px;
   }
 
-  panel-title a, a.more_facets_link {
+  h3.panel-title a, a.more_facets_link {
     color: #333;
   }
 
