update tombstoned resource message

--- a/app/views/hyrax/file_sets/_media_tombstone.html.erb
+++ b/app/views/hyrax/file_sets/_media_tombstone.html.erb
@@ -3,6 +3,6 @@
     Rights have expired. This resource can no longer be displayed.
   </div>
   <div>
-    Questions? Please contact the rights holder or <a href="mailto:fulcrum-info@umich.edu">fulcrum-info@umich.edu</a>
+    Questions? Please contact the rights holder or the publisher.
   </div>
 </div>
