Addresses HELIO-3069 updates to publisher statistics.

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -1501,3 +1501,21 @@ footer.press {
   top: 0;
   width: 100%;
 }
+
+
+///////////////////////////////////
+// PRESS STATISTICS
+///////////////////////////////////
+.press-stats-text {
+  border: 1px solid #DDDDDD;
+  border-radius: 4px;
+  border-bottom-color: transparent;
+  border-top-color: transparent;
+  padding: 1.4em;
+  margin: 0;
+  font-weight: bold;
+}
+
+
+
+
