--- a/app/views/catalog/facet.html.erb
+++ b/app/views/catalog/facet.html.erb
@@ -5,7 +5,7 @@
 <div data-ajax-modal="container">
   <div aria-label="<%= facet_field_label(@facet.key) %>">
     <div class="modal-header">
-      <button type="button" class="ajax-modal-close close" data-dismiss="modal" aria-label="Close">
+      <button type="button" class="ajax-modal-close close" data-dismiss="modal" aria-label="Close dialog">
         <span  aria-hidden="true">&times;</span>
       </button>
       <h3 class="modal-title"><%= facet_field_label(@facet.key) %></h3>
