Addresses HELIO-3099 UMP EBC Color Contrast - Flash 'x' Close Button

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -51,6 +51,18 @@
   background-color:#367c36 !important;
 }
 
+.alert {
+  a.close {
+    color: #31708f;
+    opacity: .85;
+  }
+
+  a.close:active, a.close:hover {
+    color: #31708f;
+    opacity: 1;
+  }
+}
+
 ///////////////////////////////////
 // COLORS
 ///////////////////////////////////
