Addresses HELIO-3098 UMP EBC Color Contrast - Link Text on Jumbotron Grey Background

--- a/app/assets/stylesheets/application/themes.scss
+++ b/app/assets/stylesheets/application/themes.scss
@@ -2925,7 +2925,7 @@ $um-accent-footer: #989c97;
 
 $um-accent-link: #587abc;
 
-$um-grey-1: #d5d6d2;
+$um-grey-1: #dedfdb;
 $um-grey-2: #989c97;
 $um-grey-3: #655a52;
 $um-blue: #40658f;
