--- a/app/assets/stylesheets/mozilla-pdf-viewer/cozy-honey-bear-reader.css
+++ b/app/assets/stylesheets/mozilla-pdf-viewer/cozy-honey-bear-reader.css
@@ -84,6 +84,16 @@ html, body {
   margin-top: 1rem;
 }
 
+.modal__close::before {
+  color: #00274c;
+  opacity: .85;
+}
+
+/*.modal__close:active::before, .modal__close:hover::before {
+  color: #00274c;
+  opacity: 1;
+}*/
+
 .modal__content {
   overflow: auto;
   /*height: 100%;*/
@@ -110,7 +120,6 @@ html, body {
   color: #000;
   outline: 0;
 }
-
 
 /* --- FROM VIEWER.CSS --- */
 
