--- a/app/views/e_pubs/_cozy_controls_top.html.erb
+++ b/app/views/e_pubs/_cozy_controls_top.html.erb
@@ -26,14 +26,14 @@
         cozy.control.widget.panel({
           region: 'top.header.right',
           className: 'cozy-container-altmetric',
-          template: '<div data-badge-popover="bottom" data-badge-type="1" data-isbn="<%= @parent_presenter.isbn_noformat.first %>" data-hide-no-mentions="true" class="altmetric-embed"></div>',
+          template: '<div data-badge-type="1" data-isbn="<%= @parent_presenter.isbn_noformat.first %>" data-hide-no-mentions="true" class="altmetric-embed"></div>',
         }).addTo(reader);
 
         <% if @parent_presenter.doi.present? %>
           cozy.control.widget.panel({
             region: 'top.header.right',
             className: 'cozy-container-dimensions',
-            template: '<span class="__dimensions_badge_embed__" data-doi="<%= @parent_presenter.doi_path %>" data-hide-zero-citations="true" data-legend="hover-bottom" data-style="large_rectangle"></span>',
+            template: '<span class="__dimensions_badge_embed__" data-doi="<%= @parent_presenter.doi_path %>" data-hide-zero-citations="true" data-legend="never" data-style="large_rectangle"></span>',
           }).addTo(reader);
         <% end %>
 
