Resolve HELIO-3002: NVDA, a change for the better. (#2571)

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -383,6 +383,12 @@ footer.press {
 #facet-panel-collapse {
   padding-left: 0px;
 }
+
+.facet-anchor {
+  display: flex;
+  justify-content: space-between;
+}
+
 .facets-container {
   .panel-group {
     padding-left: 0px;
