--- a/app/views/press_catalog/_index_gallery_score_wrapper.html.erb
+++ b/app/views/press_catalog/_index_gallery_score_wrapper.html.erb
@@ -1,6 +1,4 @@
 <% # container for document in index gallery view -%>
-<% presenter = Hyrax::PresenterFactory.build_for(ids: [document.id], presenter_class: Hyrax::ScorePresenter, presenter_args: current_ability).first %>
+<% presenter = Hyrax::ScorePresenter.new(document, current_ability) %>
 <% counter = document_counter_with_offset(document_counter) %>
 <%= render partial: "index_gallery", locals: { document: document, counter: counter, presenter: presenter } %>
-
-
