HELIO-3214 - remove old colors

--- a/app/assets/stylesheets/application/themes.scss
+++ b/app/assets/stylesheets/application/themes.scss
@@ -1646,7 +1646,7 @@ $amherst-white: #fafafa;
 //
 ///////////////////////////////////////////////
 // colors
-$barpublishing-brand-color: #c42b24; //#b6111a; //#c53827;
+$barpublishing-brand-color: #c42b24;
 $barpublishing-link: #3b5999;
 $barpublishing-accent-link: #2d4474;
 $barpublishing-black-80: #333;
