Added customizable Press site navigation block If the nav block exists, don't show the jumbotron
HELIO-3102, HELIO-3103

--- a/app/views/shared/_brand_press_bar.html.erb
+++ b/app/views/shared/_brand_press_bar.html.erb
@@ -26,6 +26,9 @@
 
     <div class="collapse navbar-collapse" id="brand-bar-nav">
       <div class="navbar-right">
+        <% if navigation_block(press_subdomain).present? %>
+          <%= navigation_block(press_subdomain).html_safe %>
+        <% end %>
         <% if current_user && show_site_actions? %>
           <%= render 'shared/my_actions' %>
         <% elsif current_institutions? %>
